--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,3 @@
-@import 'vendors/normalize.scss';
 @import 'includes/variables.scss';
 @import 'includes/header.scss';
 @import 'includes/footer.scss';
@@ -94,6 +93,17 @@ body {
 		.button {
 			font-size: 2em;
 			width: 210px;
+		}
+	}
+
+	@media (min-device-width : 320px) and (max-device-width : 480px) {
+		h1 {
+			margin-top: 0;
+		}
+
+		.button {
+			font-size: 1em;
+			width: 100px;
 		}
 	}
 
